[fixes #27898051, #28358759, #29021809, #29614165, #30768761] Landing page static flashes, font readability, separate Reminder in headings, upcoming and settings links moved in all emails, edit reminder page fixed

--- a/app/assets/stylesheets/partials/_base.sass
+++ b/app/assets/stylesheets/partials/_base.sass
@@ -35,6 +35,8 @@ h1, h2, h3, h4
 h2
   font-size: 36px
   +text-shadow(rgba(0, 0, 0, 0.5) 0 1px 2px)
+  &.readable
+    font: 30px Amaranth, sans-serif
 h3
   font-size: 24px
 h4
@@ -49,7 +51,7 @@ b
   color: $three
   cursor: pointer
   display: block
-  font-family: Lobster
+  font-family: 'Lobster', sans-serif
   font-size: 22px
   padding: 11px 0
   text-decoration: none
@@ -96,7 +98,7 @@ b
     
 .cancel
   color: $red
-  font: 14px Amaranth
+  font: 14px Amaranth, sans-serif
   padding-left: 5px
   
 .delete
